Revert "chore(QTDI-2894): S6204 Stream.toList()"
This reverts commit c8777245663ae6fee18ce55d2844eec44f2f901a.