@@ -15,6 +15,7 @@
  */
 package org.talend.sdk.component.runtime.input;
 
+import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotSame;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -93,7 +94,7 @@ public class PartitionMapperImplTest {
 
         @Split
         public Collection<SampleMapper> split(@PartitionSize final int partitions) {
-            return IntStream.range(0, partitions).mapToObj(i -> new SampleMapper()).toList();
+            return IntStream.range(0, partitions).mapToObj(i -> new SampleMapper()).collect(toList());
         }
 
         @Emitter
