@@ -19,6 +19,7 @@ import static java.util.Arrays.asList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonMap;
 import static java.util.Optional.ofNullable;
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
 import java.lang.reflect.Field;
@@ -78,7 +79,7 @@ public class ConfigurationMapper {
                                         param.getNestedParameters()
                                                 .stream()
                                                 .filter(p -> !isPrimitive(p))
-                                                .toList(),
+                                                .collect(toList()),
                                         item, indexes));
                                 return res;
                             })
