@@ -17,6 +17,7 @@ package org.talend.sdk.component.runtime.manager.reflect;
 
 import static java.util.Comparator.comparing;
 import static java.util.Optional.ofNullable;
+import static java.util.stream.Collectors.toList;
 
 import java.util.Arrays;
 import java.util.HashMap;
@@ -47,7 +48,7 @@ public class ComponentMetadataService {
     public ComponentMetadataService() {
         this.enrichers = StreamSupport
                 .stream(ServiceLoader.load(ComponentMetadataEnricher.class).spliterator(), false)
-                .toList();
+                .collect(toList());
     }
 
     public Map<String, String> getMetadata(final Class<?> clazz) {
