@@ -29,6 +29,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.annotation.PreDestroy;
@@ -178,10 +179,10 @@ public class LocalCacheService implements LocalCache, Serializable {
         if (maxEviction > 0) {
             elements = elements.limit(maxEviction);
         }
-        final List<String> removableElements = elements.map(Entry::getKey).toList();// materialize
-                                                                                    // before
-                                                                                    // actually
-                                                                                    // removing it
+        final List<String> removableElements = elements.map(Entry::getKey).collect(Collectors.toList());// materialize
+                                                                                                        // before
+                                                                                                        // actually
+                                                                                                        // removing it
         removableElements.forEach(this.cache::remove);
     }
 
