@@ -16,6 +16,7 @@
 package org.talend.sdk.component.runtime.manager.service;
 
 import static java.util.Optional.ofNullable;
+import static java.util.stream.Collectors.toList;
 
 import java.io.File;
 import java.io.IOException;
@@ -90,7 +91,7 @@ public class ResolverImpl implements Resolver, Serializable {
                     .map(Artifact::toPath)
                     .map(fileResolver)
                     .map(Path::toFile)
-                    .toList();
+                    .collect(toList());
         } catch (final IOException e) {
             throw new IllegalArgumentException(e);
         }
