@@ -15,6 +15,8 @@
  */
 package org.talend.test;
 
+import static java.util.stream.Collectors.toList;
+
 import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
@@ -66,7 +68,7 @@ public class CheckpointInput implements Serializable {
 
     @PostConstruct
     public void init() {
-        data = IntStream.range(0, 10).boxed().toList();
+        data = IntStream.range(0, 10).boxed().collect(toList());
         if (configuration.checkpoint == null) {
             log.info("[resume] No valid checkpoint configuration found, using start of dataset.");
             bookmark = 0;
