@@ -15,6 +15,7 @@
  */
 package org.talend.sdk.component.server.front.security;
 
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
 import java.util.Collection;
@@ -47,7 +48,7 @@ public class SecurityUtils {
                 .flatMap(s -> flatten(s)
                         .filter(p -> Boolean.parseBoolean(p.getMetadata().getOrDefault(CREDENTIAL, "false"))))
                 .map(m -> m.getPath())
-                .toList();
+                .collect(toList());
 
         return Stream.concat(vault.decrypt(config.entrySet()
                 .stream()
@@ -66,7 +67,7 @@ public class SecurityUtils {
         return flatten(meta)
                 .filter(p -> Boolean.parseBoolean(p.getMetadata().getOrDefault(CREDENTIAL, "false")))
                 .map(m -> m.getPath())
-                .toList();
+                .collect(toList());
     }
 
     private Stream<ParameterMeta> flatten(final ParameterMeta meta) {
