@@ -15,6 +15,8 @@
  */
 package org.talend.sdk.component.server.test.custom;
 
+import static java.util.stream.Collectors.toList;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.Serializable;
@@ -51,7 +53,7 @@ public class CustomService implements Serializable {
                                         .of("i.m.a.virtual.configuration.entry",
                                                 "i.m.another.virtual.configuration.entry")
                                         .map(key -> new SuggestionValues.Item(key, configuration.get(key))))
-                        .toList());
+                        .collect(toList()));
     }
 
     @Action("unknownException")
