@@ -15,6 +15,7 @@
  */
 package org.talend.sdk.component.starter.server.front;
 
+import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON_TYPE;
 
@@ -110,7 +111,7 @@ public class RRDEndpoint {
                 .range(0, timestamps.length)
                 .filter(idx -> !skipNan || !Double.isNaN(values[idx]))
                 .mapToObj(idx -> new Point(timestamps[idx], Double.isNaN(values[idx]) ? 0 : values[idx]))
-                .toList();
+                .collect(toList());
     }
 
     private String getMetricName(final String it) {
